# rules_rust

./: .bazelignore  .bazelrc  .gitignore  404.html  MODULE.bazel  WORKSPACE.bazel  cargo.html  cargo_settings.html  crate_universe.html  crate_universe_bzlmod.html  crate_universe_workspace.html  extensions.html  external_crates.html  flatten.html  index.html  print.html  rules.html  rust.html  rust_analyzer.html  rust_bindgen.html  rust_bzlmod.html  rust_clippy.html  rust_doc.html  rust_fmt.html  rust_mdbook.html  rust_prost.html  rust_proto.html  rust_protobuf.html  rust_repositories.html  rust_settings.html  rust_toolchains.html  rust_unpretty.html  rust_wasm_bindgen.html  searchindex.js  searchindex.json  settings.html  toc.html  toc.js  upstream_tooling.html  version.bzl
cargo/private/: BUILD.bazel  cargo_bootstrap.bzl  cargo_build_script.bzl  cargo_build_script_wrapper.bzl  cargo_utils.bzl  internal_extensions.bzl  runfiles_enabled.bzl
cargo/private/cargo_toml_info/: BUILD.bazel  main.rs
cargo/private/runfiles_maker/: BUILD.bazel  runfiles_maker.rs
crate_universe/: BUILD.bazel  Cargo.toml  defs.bzl  deps_bootstrap.bzl  docs_bzlmod.bzl  docs_workspace.bzl  extension.bzl  extensions.bzl  repositories.bzl  version.bzl
crate_universe/private/: crate.bzl  crates_repository.bzl  crates_vendor.bzl  generate_utils.bzl  internal_extensions.bzl  splicing_utils.bzl  srcs.bzl
crate_universe/private/module_extensions/: BUILD.bazel
crate_universe/src/: cli.rs  config.rs  context.rs  lockfile.rs  main.rs  metadata.rs  rendering.rs  splicing.rs  test.rs  utils.rs
crate_universe/src/api/: lockfile.rs
crate_universe/src/cli/: generate.rs  splice.rs  vendor.rs
crate_universe/src/context/: crate_context.rs  platforms.rs
crate_universe/src/metadata/: cargo_bin.rs  cargo_tree_resolver.rs  cargo_tree_rustc_wrapper.bat  dependency.rs  metadata_annotation.rs  workspace_discoverer.rs
crate_universe/src/rendering/: template_engine.rs
crate_universe/src/splicing/: splicer.rs
crate_universe/src/utils/: starlark.rs
crate_universe/tests/: cargo_integration_test.rs
crate_universe/tools/cross_installer/: cross_installer_deps.bzl
docs/: BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  book.toml  cargo.md  crate_universe.md  crate_universe_bzlmod.md  defs.md  flatten.md  index.md  rust_analyzer.md  rust_analyzer.vm  rust_bindgen.md  rust_doc.md  rust_fmt.md  rust_proto.md  rust_proto.vm  rust_repositories.md  rust_wasm_bindgen.vm  symbols.bzl
docs/src/: SUMMARY.md  cargo.md  cargo_settings.md  crate_universe.md  crate_universe_bzlmod.md  defs.md  flatten.md  index.md  providers.md  rules.md  rust.md  rust_analyzer.md  rust_bindgen.md  rust_clippy.md  rust_doc.md  rust_fmt.md  rust_mdbook.md  rust_prost.md  rust_proto.md  rust_protobuf.md  rust_repositories.md  rust_settings.md  rust_toolchain.md  rust_toolchains.md  rust_wasm_bindgen.md  rust_wasm_bindgen_rules_js.md  rust_wasm_bindgen_rules_nodejs.md
examples/android/: .bazelrc  AndroidMain.java  JniShim.java  MODULE.bazel  WORKSPACE.bazel
examples/bazel_env/: .bazelrc  .envrc  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  cargo_test.sh  hello  rustc_test.sh  rustfmt_test.sh
examples/bazel_env/env/: BUILD.bazel
examples/bindgen_toolchain/: BUILD.bazel  MODULE.bazel  README.md
examples/cargo_lints/: .gitignore  BUILD.bazel  Cargo.toml  MODULE.bazel
examples/cargo_lints/src/: lib.rs
examples/crate_universe/: .bazelrc  DEVELOPMENT.md  MODULE.bazel  WORKSPACE.bazel  vendor_extensions.bzl
examples/crate_universe/alias_rule/: cargo-bazel-lock_global_alias_annotation_none.json  cargo-bazel-lock_global_alias_annotation_opt.json  cargo-bazel-lock_global_custom_annotation_none.json  cargo-bazel-lock_global_dbg_annotation_fastbuild.json  cargo-bazel-lock_global_opt_annotation_alias.json  cargo-bazel-lock_global_opt_annotation_dbg.json  cargo-bazel-lock_global_opt_annotation_none.json
examples/crate_universe/cargo_aliases/: Cargo.toml  cargo-bazel-lock.json
examples/crate_universe/cargo_conditional_deps/: cargo-bazel-lock.json
examples/crate_universe/cargo_local/: BUILD.bazel  Cargo.toml
examples/crate_universe/cargo_workspace/: cargo-bazel-lock.json
examples/crate_universe/complicated_dependencies/: BUILD.bazel  boringssl_utils.bzl  build_script_dir_maker.rs  cargo-bazel-lock.json
examples/crate_universe/multi_package/: cargo-bazel-lock.json
examples/crate_universe/no_cargo_manifests/: cargo-bazel-lock.json
examples/crate_universe/override_target/: cargo-bazel-lock.json
examples/crate_universe/using_cxx/: cargo-bazel-lock.json  cxxbridge-cmd.cargo-bazel-lock.json
examples/crate_universe/vendor_local_patching/: .gitignore  BUILD.bazel  Cargo.toml  README.md
examples/crate_universe_local_path/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  vendor_edit_test.sh  vendor_lazy_static.sh
examples/ffi/: .bazelrc  MODULE.bazel  README.md
examples/ios/: MODULE.bazel  WORKSPACE.bazel  main_lib.m
examples/ios_build/: BUILD.bazel  Cargo.toml  MODULE.bazel  WORKSPACE.bazel  extensions.bzl  ios_utils.bzl
examples/musl_cross_compiling/: BUILD.bazel  Cargo.Bazel.lock.json  Cargo.toml  MODULE.bazel  WORKSPACE.bazel  hello_linux_musl_test.sh  musl_utils.bzl
examples/musl_cross_compiling/src/: keyring.rs
examples/nix_cross_compiling/: .bazelrc  MODULE.bazel  WORKSPACE.bazel
examples/sys/: .bazelrc  MODULE.bazel  WORKSPACE.bzlmod  extensions.bzl
examples/zig_cross_compiling/: .bazelrc  BUILD.bazel  WORKSPACE.bazel  cargo-bazel-lock.json
extensions/bindgen/: .bazelrc  BUILD.bazel  MODULE.bazel  defs.bzl  extensions.bzl  repositories.bzl
extensions/prost/: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  defs.bzl  extensions.bzl  repositories.bzl  transitive_repositories.bzl
extensions/protobuf/: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  extensions.bzl  repositories.bzl  transitive_repositories.bzl
extensions/wasm_bindgen/: .bazelignore  .bazelrc  BUILD.bazel  DEVELOPMENT.md  MODULE.bazel  WORKSPACE.bazel  defs.bzl  extensions.bzl  repositories.bzl
(+1307 files in other folders)
