[workspace]
members = ["tools/cross_installer", "tools/urls_generator"]
exclude = ["test_data"]

[package]
name = "cargo-bazel"
version = "0.15.0"
authors = ["Andre Brisco - andre.brisco@protonmail.com"]
categories = ["development-tools"]
description = "A collection of tools which use Cargo to generate build targets for Bazel"
edition = "2021"
keywords = ["bazel"]
license = "Apache-2.0"
repository = "https://github.com/bazelbuild/rules_rust"

[features]
cargo = []
default = ["cargo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
camino = "1.1.9"
cargo_metadata = "0.18.1"
cargo_toml = "0.20.5"
cargo-lock = "10.0.0"
cargo-platform = "0.1.7"
cfg-expr = "0.17.0"
clap = { version = "4.3.11", features = ["derive", "env"] }
crates-index = { version = "3.2.0", default-features = false, features = [
    "git",
] }
hex = "0.4.3"
indoc = "2.0.5"
itertools = "0.13.0"
normpath = "1.3.0"
once_cell = "1.20.2"
pathdiff = "0.2.2"
regex = "1.11.0"
semver = "1.0.23"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.129"
serde_starlark = "0.1.16"
sha2 = "0.10.8"
spdx = "0.10.6"
tempfile = "3.13.0"
tera = { version = "1.19.1", default-features = false }
textwrap = "0.16.1"
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.2"

[dev-dependencies]
maplit = "1.0.2"
