load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load(":runfiles_enabled.bzl", "runfiles_enabled_build_setting")

bzl_library(
    name = "bzl_lib",
    srcs = glob(["**/*.bzl"]),
    visibility = ["//:__subpackages__"],
)

runfiles_enabled_build_setting(
    name = "runfiles_enabled",
    visibility = ["//visibility:public"],
)
