bazel_dep(name = "rules_rust", version = "0.0.0")
local_path_override(
    module_name = "rules_rust",
    path = "../..",
)

bazel_dep(name = "rules_shell", version = "0.3.0")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(edition = "2021")
use_repo(
    rust,
    "rust_toolchains",
)

register_toolchains("@rust_toolchains//:all")

crate = use_extension(
    "@rules_rust//crate_universe:extension.bzl",
    "crate",
)
crate.from_cargo(
    name = "crates_from_cargo_workspace",
    cargo_lockfile = "//crates_from_workspace:Cargo.lock",
    manifests = ["//crates_from_workspace:Cargo.toml"],
)
use_repo(crate, "crates_from_cargo_workspace")
